# openQ4-game

./: README.md
.github/workflows/: commit-validation.yml
src/: meson.build
src/framework/: BuildDefines.h  BuildVersion.h  CmdSystem.h  Common.h  DeclPDA.h  FileSystem.h  declAF.h  declEntityDef.h  declLipSync.h  declManager.h  declMatType.h  declPlayback.h  declSkin.h  declTable.h  licensee.h
src/framework/async/: NetworkSystem.h
src/game/: AFEntity.cpp  Actor.cpp  BrittleFracture.cpp  Effect.cpp  Entity.cpp  Game_local.cpp  Game_local.h  Game_network.cpp  Game_render.cpp  Item.cpp  Item.h  LipSync.cpp  Misc.cpp  Mover.cpp  MultiplayerGame.cpp  MultiplayerGame.h  Player.cpp  Player.h  PlayerView.cpp  Projectile.cpp  Projectile.h  SplineMover.cpp  Target.cpp  TramGate.cpp  Trigger.cpp  Weapon.cpp  Weapon.h  spawner.cpp
src/game/ai/: AI.cpp  AI_Actions.cpp  AI_Debug.cpp  AI_Move.cpp  AI_States.cpp  AI_Util.cpp  AI_pathing.cpp  Monster_BossMakron.cpp
src/game/anim/: Anim_Blend.cpp
src/game/bots/: Bot.cpp
src/game/client/: ClientAFEntity.cpp  ClientEffect.cpp  ClientMoveable.cpp
src/game/gamesys/: Event.cpp  SaveGame.cpp  SaveGame.h  State.cpp  SysCmds.cpp  SysCvar.cpp  SysCvar.h
src/game/physics/: Physics_Base.cpp  Physics_StaticMulti.cpp  Push.cpp
src/game/script/: ScriptFuncUtility.cpp  Script_Interpreter.h  Script_Program.cpp
src/game/vehicle/: Vehicle.cpp  VehicleParts.cpp  VehiclePosition.cpp
src/game/weapon/: WeaponLightningGun.cpp  WeaponRocketLauncher.cpp
src/idlib/: Dict.cpp  Dict.h
src/idlib/containers/: StrPool.h
src/mpgame/: AFEntity.cpp  Actor.cpp  BrittleFracture.cpp  Camera.cpp  Effect.cpp  Entity.cpp  GameEdit.cpp  Game_Debug.cpp  Game_local.cpp  Game_local.h  Game_network.cpp  Instance.cpp  Item.cpp  Item.h  LipSync.cpp  Misc.cpp  Mover.cpp  MultiplayerGame.cpp  MultiplayerGame.h  Player.cpp  Player.h  PlayerView.cpp  Projectile.cpp  SplineMover.cpp  Target.cpp  TramGate.cpp  Trigger.cpp  Weapon.cpp  Weapon.h  spawner.cpp
src/mpgame/ai/: AI.cpp  AI_Actions.cpp  AI_Move.cpp  AI_States.cpp  AI_Util.cpp  AI_pathing.cpp
src/mpgame/anim/: Anim_Blend.cpp
src/mpgame/client/: ClientAFEntity.cpp  ClientEffect.cpp  ClientEffect.h
src/mpgame/gamesys/: Class.cpp  Class.h  Event.cpp  Event.h  SaveGame.cpp  SaveGame.h  State.cpp  SysCvar.cpp  SysCvar.h
src/mpgame/mp/: GameState.cpp  VoiceComms.cpp
src/mpgame/physics/: Physics_Base.cpp  Physics_StaticMulti.cpp
src/mpgame/script/: ScriptFuncUtility.cpp  Script_Interpreter.cpp  Script_Program.cpp
src/mpgame/vehicle/: Vehicle.cpp  VehicleParts.cpp  VehiclePosition.cpp
src/mpgame/weapon/: WeaponLightningGun.cpp  WeaponRocketLauncher.cpp
src/renderer/: ImageOpts.h  Material.h  Model.h  ModelManager.h  RenderSystem.h  RenderWorld.h  RendererCaps.h
src/sound/: sound.h
src/sys/: sys_public.h
src/ui/: UserInterface.h
tools/tests/: arm64_abi_contract.py  savegame_corruption_contract.py
